WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203787
LLIntGenerator should not allocate temporaries in between variables
https://bugs.webkit.org/show_bug.cgi?id=203787
Summary
LLIntGenerator should not allocate temporaries in between variables
Tadeu Zagallo
Reported
2019-11-02 12:09:57 PDT
...
Attachments
Patch
(7.01 KB, patch)
2019-11-02 12:30 PDT
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Patch for landing
(7.01 KB, patch)
2019-11-03 19:29 PST
,
Tadeu Zagallo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2019-11-02 12:30:32 PDT
Created
attachment 382684
[details]
Patch
Tadeu Zagallo
Comment 2
2019-11-02 12:32:06 PDT
<
rdar://problem/56840003
>
Yusuke Suzuki
Comment 3
2019-11-02 22:58:51 PDT
Comment on
attachment 382684
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=382684&action=review
r=me
> Source/JavaScriptCore/wasm/WasmValidate.cpp:178 > + void finishedParsingLocals() { }
In WebCore, this type of callback is named as didFinishParsingLocals. Can you align it to this?
Tadeu Zagallo
Comment 4
2019-11-03 19:17:15 PST
Comment on
attachment 382684
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=382684&action=review
Thanks for the review!
>> Source/JavaScriptCore/wasm/WasmValidate.cpp:178 >> + void finishedParsingLocals() { } > > In WebCore, this type of callback is named as didFinishParsingLocals. Can you align it to this?
Sure, I'll update it before landing.
Tadeu Zagallo
Comment 5
2019-11-03 19:29:20 PST
Created
attachment 382714
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2019-11-03 20:11:50 PST
Comment on
attachment 382714
[details]
Patch for landing Clearing flags on attachment: 382714 Committed
r251978
: <
https://trac.webkit.org/changeset/251978
>
WebKit Commit Bot
Comment 7
2019-11-03 20:11:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug